--- a/launch/base_local_planner_params.yaml
+++ b/launch/base_local_planner_params.yaml
@@ -1,11 +1,30 @@
-TrajectoryPlannerROS:
-  max_vel_x: 0.45
-  min_vel_x: 0.1
-  max_vel_theta: 1.0
+# Copied from turtlebot, not 100% sure what these do:
+shutdown_costmaps: false
+controller_frequency: 5.0
+controller_patience: 3.0
+planner_frequency: 1.0
+planner_patience: 5.0
+oscillation_timeout: 10.0
+oscillation_distance: 0.2
+
+# Use the DWA local planner, vs. the default trajectory rollout
+base_local_planner: "dwa_local_planner/DWAPlannerROS" #alternative: base_local_planner/TrajectoryPlannerROS
+
+# Use the default global planner
+base_global_planner: "navfn/NavfnROS" #alternatives: global_planner/GlobalPlanner, carrot_planner/CarrotPlanner
+
+DWAPlannerROS:
+  max_vel_x: 0.25 #0.55
+  min_vel_x: 0.1 #0.0
+  acc_lim_x: 1.0 #2.5
+
+  max_vel_y: 0.0
+  min_vel_y: 0.0
+  acc_lim_y: 0.0
+
+  acc_lim_th: 2.0 #3.2
   min_in_place_vel_theta: 0.4
+  max_vel_theta: 0.75
 
-  acc_lim_theta: 3.2
-  acc_lim_x: 2.5
-  acc_lim_y: 2.5
-
-  holonomic_robot: true
+  holonomic_robot: false
+  dwa: true # Not sure if this is required
