--- a/launch/local_costmap_params.yaml
+++ b/launch/local_costmap_params.yaml
@@ -3,7 +3,7 @@ local_costmap:
   robot_base_frame: base_link
   update_frequency: 4.0
   publish_frequency: 2.0
-  static_map: true
+  static_map: false # true if using amcl
   rolling_window: true
   width: 10.0
   height: 10.0
