--- a/package.xml
+++ b/package.xml
@@ -13,11 +13,13 @@
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>ca_driver</build_depend>
+  <build_depend>ca_msgs</build_depend>
   <build_depend>roslint</build_depend>
 
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>ca_driver</run_depend>
+  <run_depend>ca_msgs</run_depend>
 
 </package>
